jump corrected

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     -webkit-touch-callout: none;
@@ -16,6 +16,7 @@ button {
     height: 45px;
     background-size: 45px 45px;
 }
+
 canvas {
     display: block;
     position: relative;
@@ -56,7 +57,8 @@ canvas {
     font-family: "Open Sans", sans-serif;
 }
 
-.pop-up__score, .pop-up__high-score {
+.pop-up__score,
+.pop-up__high-score {
     font-size: 16px;
     padding-top: 30px;
 }
@@ -65,7 +67,7 @@ canvas {
     z-index: 1000;
     left: 50%;
     top: 10%;
-    transform: translateX(-50%) ;
+    transform: translateX(-50%);
     width: 240px;
     border-radius: 10px;
     display: flex;
@@ -95,12 +97,13 @@ canvas {
 }
 .start__btn {
     margin-left: 10px;
-    background-image: url('./img/start.png');
+    background-image: url("./img/start.png");
     width: 45px;
     height: 45px;
     background-size: 45px 45px;
 }
-.start__btn:hover, .pop__button:hover{
+.start__btn:hover,
+.pop__button:hover {
     transform: scale(1.1, 1.1);
 }
 .github {
@@ -119,6 +122,5 @@ canvas {
 @media (max-width: 768px) {
     .github {
         bottom: 0;
-
     }
 }
